@startuml
hide circle
skinparam classAttributeIconSize 0

class BillDetailController {
    - _billDetailRepository: IBillDetailRepository 
    + GetAllBillDetails(): List<BillDetailResponseDTO>
}

interface IBillDetailRepository {
    +GetAllBillDetails(): Task<List<BillDetailResponseDTO>>
}

class BillDetailRepository {
    - _billDetailDAO : BillDetailDAO
    +GetAllBillDetails(): Task<List<BillDetailResponseDTO>>
}

class BillDetailDAO {
    - _client: Client
    +GetAllBillDetails(): Task<List<BillDetailResponseDTO>>
}

class BillDetail {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}

class BillDetailResponseDTO {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}

class ErrorHandler {
    +IsJson(input: string): bool
    +ProcessErrorMessage(exceptionMessage: string): string
}


BillDetailController -- IBillDetailRepository
IBillDetailRepository <|.. BillDetailRepository
BillDetailRepository -- BillDetailDAO
BillDetailDAO -- BillDetail
BillDetailResponseDTO -- BillDetailDAO
BillDetailDAO -- ErrorHandler
BillDetailDAO -- SupabaseClient

@enduml
